book/tests/snapshots/snapshot__run_display_reference_prql@aggregate-1.prql.snap
---
source: book/tests/snapshot.rs
expression: Statements(parse(&prql).unwrap())
input_file: book/tests/prql/transforms/aggregate-1.prql
---
from employees
group [
  title,
  country,
] (
  aggregate [
  average salary,
  ct = count,
]
)



