book/tests/snapshots/snapshot__run_display_reference_prql@cte-0.prql.snap
---
source: book/tests/snapshot.rs
expression: Statements(parse(&prql).unwrap())
input_file: book/tests/prql/examples/cte-0.prql
---
table newest_employees = (
  from employees
  sort tenure
  take 50
)



table average_salaries = (
  from salaries
  group country (
  aggregate (
  average_country_salary = average salary
)
)
)



from newest_employees
join average_salaries [==country]
select [
  name,
  salary,
  average_country_salary,
]



