book/tests/snapshots/snapshot__run_display_reference_prql@introduction-0.prql.snap
---
source: book/tests/snapshot.rs
expression: "Item::Query(parse(&prql).unwrap())"
input_file: book/tests/prql/introduction-0.prql
---
prql dialect: generic

from employees
filter start_date > @2021-01-01
derive [
  gross_salary = salary + coalesce tax 0,
  gross_cost = gross_salary + benefits_cost,
]
filter gross_cost > 0
group [
  title,
  country,
] ( aggregate [
  average gross_salary,
  sum_gross_cost = sum gross_cost,
] )
filter sum_gross_cost > 100000
derive [
  id = f"{title}_{country}",
  db_version = s"version()",
]
sort [
  sum_gross_cost,
  !country,
]
take 1..20

