book/tests/snapshots/snapshot__run_display_reference_prql@list-equivalence-2.prql.snap
---
source: book/tests/snapshot.rs
expression: "Item::Query(parse(&prql).unwrap())"
input_file: book/tests/prql/examples/list-equivalence-2.prql
---
prql dialect:generic

from employees
derive [
  gross_salary = salary + payroll_tax,
  gross_cost = gross_salary + benefits_cost,
]


