book/tests/snapshots/snapshot__run_display_reference_prql@ranges-0.prql.snap
---
source: book/tests/snapshot.rs
expression: "Item::Query(parse(&prql).unwrap())"
input_file: book/tests/prql/language-features/ranges-0.prql
---
prql dialect:generic

from events
filter (
  date
  in @1776-07-04..@1787-09-17
)
filter (
  magnitude
  in 50..100
)


