book/tests/snapshots/snapshot__run_display_reference_prql@stdlib-0.prql.snap
---
source: book/tests/snapshot.rs
expression: "Item::Query(parse(&prql).unwrap())"
input_file: book/tests/prql/stdlib-0.prql
---
prql dialect:generic

from employees
derive [
  gross_salary = (
  salary + payroll_tax
  as int
),
  gross_salary_rounded = (
  gross_salary
  round 0
),
]


